--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "eslint": "^8.55.0",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-import-resolver-nuxt": "^1.0.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.19.2",
     "nuxt": "^3.8.2",
+    "typescript": "^5.3.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   }
