--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.19.2",
     "nuxt": "^3.8.2",
+    "sass": "^1.69.5",
     "typescript": "^5.3.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
