--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,20 +6,42 @@
   },
   "extends": [
     "eslint:recommended",
-    "standard-with-typescript",
     "@vue/typescript/recommended",
+    "standard-with-typescript",
     "plugin:vue/vue3-essential",
-    "plugin:nuxt/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:nuxt/recommended"
   ],
   "parser": "vue-eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module"
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "extraFileExtensions": [
+      ".vue"
+    ],
+    "project": [
+      "./tsconfig.json"
+    ]
   },
-  "plugins": ["vue"],
+  "plugins": [
+    "vue"
+  ],
   "rules": {
-    "max-len": ["error", { "code": 120 }],
+    "vue/multi-word-component-names": [
+      "error",
+      {
+        "ignores": [
+          "index"
+        ]
+      }
+    ],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "varsIgnorePattern": "props|emits"
+      }
+    ],
     "vue/max-len": [
       "error",
       {
@@ -31,7 +53,10 @@
   "settings": {
     "import/resolver": {
       "nuxt": {
-        "extensions": [".js", ".vue"]
+        "extensions": [
+          ".js",
+          ".vue"
+        ]
       }
     }
   }
