--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.55.0",
     "eslint-config-standard-with-typescript": "^40.0.0",
     "eslint-import-resolver-nuxt": "^1.0.1",
