--- a/package.json
+++ b/package.json
@@ -7,23 +7,21 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "npm run lint:js && npm run lint:prettier",
+    "lintfix": "prettier --write --list-different . && npm run lint:js --fix"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/eslint-module": "^4.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/parser": "^6.13.2",
-    "@vue/eslint-config-typescript": "^12.0.0",
     "eslint": "^8.55.0",
-    "eslint-config-standard-with-typescript": "^40.0.0",
-    "eslint-import-resolver-nuxt": "^1.0.1",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-n": "^16.3.1",
-    "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.19.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "nuxt": "^3.8.2",
+    "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "typescript": "^5.3.2",
     "vue": "^3.3.8",
