--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,9 +10,14 @@
     "parser": "@typescript-eslint/parser",
     "ecmaVersion": 2021,
     "sourceType": "module",
-    "extraFileExtensions": [".vue"]
+    "extraFileExtensions": [
+      ".vue"
+    ]
   },
-  "extends": ["@nuxtjs/eslint-config-typescript", "plugin:prettier/recommended"],
+  "extends": [
+    "@nuxtjs/eslint-config-typescript",
+    "plugin:prettier/recommended"
+  ],
   "rules": {
     "vue/multi-word-component-names": [
       "error",
