--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,25 +10,14 @@
     "parser": "@typescript-eslint/parser",
     "ecmaVersion": 2021,
     "sourceType": "module",
-    "extraFileExtensions": [
-      ".vue"
-    ]
+    "extraFileExtensions": [".vue"]
   },
-  "extends": [
-    "@nuxtjs/eslint-config-typescript",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["@nuxtjs/eslint-config-typescript", "plugin:prettier/recommended"],
   "rules": {
     "vue/multi-word-component-names": [
       "error",
       {
-        "ignores": [
-          "index",
-          "blog",
-          "about",
-          "pricing",
-          "contact"
-        ]
+        "ignores": ["index", "blog", "about", "pricing", "contact"]
       }
     ],
     "no-unused-vars": "off",
