--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,9 +10,16 @@
     "parser": "@typescript-eslint/parser",
     "ecmaVersion": 2021,
     "sourceType": "module",
-    "extraFileExtensions": [".vue"]
+    "extraFileExtensions": [".vue"],
+    "settings": {
+      "import/resolver": {
+        "typescript": {
+          "alwaysTryTypes": true
+        }
+      }
+    }
   },
-  "extends": ["@nuxtjs/eslint-config-typescript", "plugin:prettier/recommended"],
+  "extends": ["@nuxtjs/eslint-config-typescript", "plugin:prettier/recommended", "@feature-sliced"],
   "rules": {
     "vue/multi-word-component-names": [
       "error",
@@ -21,13 +28,6 @@
       }
     ],
     "vue/no-multiple-template-root": "off",
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "varsIgnorePattern": "props|emits"
-      }
-    ],
     "vue/max-len": [
       "error",
       {
