--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,12 +21,7 @@
   },
   "extends": ["@nuxtjs/eslint-config-typescript", "plugin:prettier/recommended", "@feature-sliced"],
   "rules": {
-    "vue/multi-word-component-names": [
-      "error",
-      {
-        "ignores": ["index", "blog", "about", "pricing", "contact"]
-      }
-    ],
+    "vue/multi-word-component-names": ["off"],
     "vue/no-multiple-template-root": "off",
     "vue/max-len": [
       "error",
