--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "eslint-plugin-boundaries": "^4.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "happy-dom": "^12.10.3",
     "nuxt": "^3.8.2",
+    "nuxt-vitest": "^0.11.5",
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "typescript": "^5.3.2",
+    "vitest": "^0.33.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   }
